update reports filters, options menu
