# src/Backend/Inspections.API/Features/Reports/ReportsController.cs
@@ -59,9 +59,9 @@ namespace Inspections.API.Features.Inspections
         }
 
         [HttpGet]
-        public async Task<IActionResult> GetAll(string filter, bool? closed)
+        public async Task<IActionResult> GetAll(string filter, bool? closed, bool myReports = true)
         {
-            var result = await _reportsRepository.GetAll(filter, closed).ConfigureAwait(false);
+            var result = await _reportsRepository.GetAll(filter, closed, myReports).ConfigureAwait(false);
             if (result is null)
                 return NoContent();
 
