# src/Mobile/ReportsApp/services/api/swagger.json
@@ -1933,6 +1933,14 @@
               "type": "boolean",
               "nullable": true
             }
+          },
+          {
+            "name": "myReports",
+            "in": "query",
+            "schema": {
+              "type": "boolean",
+              "default": true
+            }
           }
         ],
         "responses": {
